public/stylesheets/style.css
* {
  box-sizing: border-box;
  background-color: #001e59;
}

* {
  margin: auto;
  padding: auto;
}

body,
html {
  background-color: #f0f2f5;
  background-image: url("https://1.bp.blogspot.com/-fd1WXKk-TAc/XyqfngP4PiI/AAAAAAAAVMw/umQz3tkxtg43uPIy8W5og6gAkpCfjaTvACLcBGAsYHQ/w1563-h1563/bg-snell.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 100%;
  height: 100vh;
  text-rendering: optimizeLegibility;
}

.dust-paarticle {
  position: absolute;
  width: 100%;
}

#snell {
  position: absolute;
  top: 0;
  width: 100%;
}

#eye1 {
  animation: swing ease-in-out 0.6s infinite alternate;
  transform-origin: bottom;
  transform-box: fill-box;
  left: calc(52% - 0rem);
}

#eye2 {
  animation: swing ease-in-out 0.5s infinite alternate;
  transform-origin: bottom;
  transform-box: fill-box;
  left: calc(40% - 0rem);
}

#dust-paarticle path {
  transform-box: fill-box;
  transform-origin: center;
}

/*************swing************/
@keyframes swing {
  0% {
    transform: rotate(8deg);
  }
  100% {
    transform: rotate(-8deg);
  }
}

.position-set {
  position: absolute;
  top: 5%;
}

@import url("https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700,900");

/*--------------------*/
/* 02. Common CSS */
/*--------------------*/

body {
  font-family: "Titillium Web", sans-serif;
  font-size: 14px;
  font-weight: 400;
  color: #44525f;
}

ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

a {
  text-decoration: none;
  color: #2d385e;
}

a:focus {
  outline: none;
  text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Titillium Web", sans-serif;
  color: #2d385e;
}

a,
a:hover,
a:focus {
  color: #4f77ff;
}

.btn-primary {
  background-color: #4f77ff;
  border-color: #4f77ff;
}

.btn-primary:hover,
.btn-primary:active:hover,
.btn-primary:focus,
.btn-primary:active:focus,
.btn-primary:active,
.btn-primary.active {
  background-color: #486ff2;
  border-color: #486ff2;
}

.authfy-login .btn.btn-lg {
  border-radius: 3px;
  box-shadow: 0px 2px 3px #9c9c9c;
}

.brand-logo {
  margin-top: 0px;
  margin-bottom: 35px;
}

/*--------------------*/
/* 03. Section Panel UI CSS */
/*--------------------*/

.authfy-container {
  margin-top: 97px;
  margin-bottom: 97px;
}

.authfy-panel-left {
  background-color: rgb(12 14 33 / 92%);
  color: #ffffff;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  -webkit-box-shadow: 0px 3px 6px #1d2030;
  box-shadow: 0px 3px 6px #1d2030;
}

.authfy-panel-right {
  background-color: #ffffff;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  -webkit-box-shadow: 0px 2px 6px 0px #1d2030;
  box-shadow: 0px 2px 6px 0px #1d2030;
}

.authfy-login,
.authfy-panel-left .brand-col {
  height: 460px;
}
.authfy-panel-left .brand-col {
  display: table;
  width: 100%;
  padding: 25px;
}

.authfy-panel-left .brand-col .headline {
  display: table-cell;
  vertical-align: middle;
}

.authfy-panel-left .brand-col .headline h1,
.authfy-panel-left .brand-col .headline h2,
.authfy-panel-left .brand-col .headline h3 {
  color: #fff;
  font-size: 48px;
  font-weight: 700;
}

.authfy-login {
  position: relative;
  top: 0;
  left: 0;
  overflow: hidden;
}

.authfy-panel {
  padding: 20px 30px;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transition: all 0.5s ease;
  opacity: 0;
  transform: translateX(-100%);
  -webkit-transform: translateX(-100%);
}

.authfy-panel .authfy-heading {
  margin-bottom: 30px;
}

.authfy-login .auth-title {
  font-weight: 700;
}

.authfy-login .authfy-panel.active {
  opacity: 1;
  transform: translateX(0);
  -webkit-transform: translateX(0);
}

.brand-col .social-buttons a {
  color: #ffffff;
  margin-top: 15px;
}

.brand-col .social-buttons a:hover {
  color: white;
  opacity: 0.9;
}

.brand-col .social-buttons .btn-facebook {
  background: #3b5998;
}
.brand-col .social-buttons .btn-twitter {
  background: #00aced;
}
.brand-col .social-buttons .btn-google {
  background: #c32f10;
}

.brand-col .social-buttons a > span {
  padding-left: 5px;
}

.panel-login {
  margin-top: 20px;
}

.panel-login .remember-row {
  margin-bottom: 10px;
}

.panel-login .remember-row label {
  font-weight: normal;
  position: relative;
  cursor: pointer;
  color: #666;
  padding-left: 24px;
}

.authfy-login .forgotPwd {
  text-align: right;
  margin-top: 10px;
}

.panel-login .form-control,
.panel-signup .form-control,
.panel-forgot .form-control {
  background-color: #fff;
  color: #333333;
  font-size: 18px;
  height: 50px;
  margin-bottom: 20px;
  padding: 12px 22px;
  border-radius: 3px;
  border: solid 1px #bcc2ce;
  outline: none;
  -webkit-box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.1),
    0 0 2px 0 rgba(0, 0, 0, 0.1);
  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.1), 0 0 2px 0 rgba(0, 0, 0, 0.1);
}

.authfy-panel.panel-forgot {
  padding-top: 40px;
}

.panel-login .form-control:focus,
.panel-signup .form-control:focus,
.panel-forgot .form-control:focus {
  border-color: #4f77ff;
  z-index: 2;
  outline: 0;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
    0 0 8px rgba(102, 175, 233, 0.6);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
    0 0 8px rgba(102, 175, 233, 0.6);
}

.pwdMask {
  position: relative;
}

.pwdMask .pwd-toggle {
  color: #cccccc;
  position: absolute;
  z-index: 2;
}

.panel-login .pwdMask .pwd-toggle,
.panel-signup .pwdMask .pwd-toggle {
  top: 15px;
  right: 15px;
}

.pwdMask .pwd-toggle:hover,
.pwdMask .pwd-toggle:focus {
  cursor: pointer;
}

.pwdMask .pwd-toggle:hover,
.pwdMask .pwd-toggle:focus,
.pwdMask .pwd-toggle.fa-eye {
  color: #4f77ff;
}

.panel-signup .term-policy a {
  text-decoration: underline;
}

/*--------------------*/
/* 04. Check box UI CSS */
/*--------------------*/

.checkbox input[type="checkbox"] {
  position: absolute;
  right: 9000px;
}
/* ... */

